products array added

--- a/index.html
+++ b/index.html
@@ -11,9 +11,22 @@
 <body>
     <section id="homeSection">
         <div class="carousel">
-            <img class="fade-in" src="assets/images/carousel/1.jpg">
-            <img class="fade-out" src="assets/images/carousel/2.jpg">
-            <!-- <img class="fade-in" src="assets/images/carousel/3.jpg"> -->
+            <img src="assets/images/carousel/3.jpg">
+            <img src="assets/images/carousel/2.jpg">
+            <img src="assets/images/carousel/1.jpg">
+            <img src="assets/images/carousel/3.jpg">
+            <img src="assets/images/carousel/2.jpg">
+            <img src="assets/images/carousel/1.jpg">
+            <img src="assets/images/carousel/3.jpg">
+            <img src="assets/images/carousel/2.jpg">
+            <img src="assets/images/carousel/1.jpg">
+            <img src="assets/images/carousel/3.jpg">
+            <img src="assets/images/carousel/2.jpg">
+            <img src="assets/images/carousel/1.jpg">
+            <img src="assets/images/carousel/3.jpg">
+            <img src="assets/images/carousel/2.jpg">
+            <img src="assets/images/carousel/1.jpg">
+            <img src="assets/images/carousel/4.jpg">
         </div>
         <nav>
             <div class="logo top">
